# EasySa

./: CMakelists.txt  README.md
cmake/: FindFFmpeg.cmake
components/: CMakeLists.txt
components/Common/include/: components_common.hpp
components/FrameControl/include/: frame_control.hpp
components/FrameSkipControl/include/: frame_skip_control.hpp
components/ModelLoader/include/: memory_queue.hpp  model_loader.hpp  model_memory.hpp  thread_pool.hpp
components/ModelLoader/src/: model_loader.cpp  model_memory.cpp  thread_pool.cpp
components/ModuleParam/include/: ModuleParam.hpp
components/ScalerAndTiler/include/: scaler.hpp  tiler.hpp
components/ScalerAndTiler/src/: scaler.cpp  scaler_libyuv.cpp  scaler_npp.cpp  scaler_opencv.cpp  tiler.cpp
components/unitest/: CMakeLists.txt
components/unitest/FrameControl/: test_frame_control.cpp
components/unitest/FrameSkipControl/: test_frame_skip_control.cpp
components/unitest/ModelLoader/: test_model_loader.cpp
components/unitest/ModuleParam/: test_module_param.cpp  test_rapidjson.cpp
components/unitest/ScalerAndTiler/: test_scaler_tiler.cpp
framework/: CMakeLists.txt
framework/core/include/: easysa_allocator.hpp  easysa_common.hpp  easysa_config.hpp  easysa_core.hpp  easysa_error.hpp  easysa_eventbus.hpp  easysa_frame.hpp  easysa_frame_va.hpp  easysa_module.hpp  easysa_pipeline.hpp  easysa_source.hpp
framework/core/include/profiler/: module_profiler.hpp  pipeline_profiler.hpp  pipeline_tracer.hpp  process_profiler.hpp  profile.hpp  stream_profiler.hpp  trace.hpp  trace_serialize_helper.hpp
framework/core/include/util/: easysa_any.hpp  easysa_queue.hpp  easysa_rwlock.hpp  easysa_spinlock.hpp  easysa_time_utility.hpp  easysa_timer.hpp
framework/core/src/: connector.cpp  connector.hpp  conveyor.cpp  conveyor.hpp  easysa_allocator.cpp  easysa_config.cpp  easysa_eventbus.cpp  easysa_frame.cpp  easysa_frame_va.cpp  easysa_module.cpp  easysa_pipeline.cpp  easysa_source.cpp
framework/core/src/profiler/: circular_buffer.hpp  module_profiler.cpp  pipeline_profiler.cpp  pipeline_tracer.cpp  process_profiler.cpp  stream_profiler.cpp  trace_serialize_helper.cpp
framework/modules/: CMakeLists.txt
framework/modules/source/include/: data_source.hpp
framework/modules/source/src/: data_handler_file.cpp  data_handler_file.hpp  data_handler_util.cpp  data_handler_util.hpp  data_source.cpp
framework/modules/source/src/util/: video_decoder.cpp  video_decoder.hpp  video_parser.cpp  video_parser.hpp
framework/unitest/: CMakeLists.txt  test_main.cpp
framework/unitest/core/: test_pipeline.cpp
plugins/: CMakeLists.txt
plugins/etvh/include/: etvh.hpp
plugins/etvh/src/: etvh.cpp
plugins/fer/include/: fer.hpp
plugins/fer/src/: fer.cpp
plugins/fp/include/: face_position.hpp
plugins/fp/src/: face_position.cpp
plugins/retinaface/: RetinaFace.cpp  RetinaFace.h
plugins/retinaface/tensorrt/: trtnetbase.cpp  trtnetbase.h  trtretinafacenet.cpp
plugins/track/include/: track.hpp  track_base.hpp
plugins/track/src/: track.cpp
plugins/unitest/: CMakeLists.txt
plugins/unitest/etvh/: test_etvh.cpp
plugins/unitest/fer/: test_fer.cpp
plugins/unitest/fp/: test_fp.cpp
plugins/unitest/retinaface/: test_retinaface.cpp
plugins/unitest/track/: test_track.cpp
sample/: CMakeLists.txt
sample/sentiment_analysis/: CMakeLists.txt  test_sentiment_analysis.cpp
sample/sentiment_analysis/include/: sentiment_analysis.hpp
sample/sentiment_analysis/src/: sentiment_analysis.cpp
sample/sentiment_analysis2/: CMakeLists.txt  test_sentiment_analysis2.cpp
sample/sentiment_analysis2/include/: sentiment_analysis2.hpp
sample/sentiment_analysis2/src/: sentiment_analysis2.cpp
sample/unitest/: CMakeLists.txt
sample/unitest/etnet/: etnet.cpp  etnet.hpp  test_etnet.cpp
sample/unitest/frp/: test_fr_position.cpp
sample/unitest/opencv/: test_opencv.cpp
sample/unitest/retinaface/: make_eye_ds.cpp  make_eye_ds.hpp  test_retinaface.cpp
sample/unitest/tensorrt/: sampleGoogleNet.cpp
